Fix text overflow

--- a/static/main.css
+++ b/static/main.css
@@ -142,6 +142,7 @@ h2, h3 {
 
 .review-title {
   margin: 0.5em 0;
+  overflow-wrap: break-word;
 }
 
 .timestamp {
@@ -187,9 +188,20 @@ h2, h3 {
   background-color: #e6e6fa;
 }
 
-.book-author {
+.book-card-author {
   font-size: 0.9em;
   color: #666;
+  overflow-wrap: break-word;
+}
+
+.book-title {
+  overflow-wrap: break-word;
+  font-weight: bold;
+}
+
+.book-author {
+  overflow-wrap: break-word;
+  font-style: italic;
 }
 
 a:focus,
